src/test/ui/issues/issue-20772.rs
trait T : Iterator<Item=Self::Item>
//~^ ERROR cycle detected
{}

fn main() {}
